# telegram-search

./: .gitignore  README.md  create_session.py  pyproject.toml  requirements.txt  server.py
src/telegram_search/: __init__.py  client.py  config.py  helpers.py  server.py
